# teste5-mad-max

./: mkdocs.yml  pyproject.toml
docs/: analise-exploratoria.md  avaliacao.md  entendimento-dados.md  entendimento-negocio.md  fonte-dados.md  index.md  metodologia.md  modelagem.md  preparacao.md  status.md
