[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aislan Freitas <aislansf@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
jupyterlab = "^3.3.4"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
mkdocs = "^1.3.0"
invoke = "^1.7.0"
ydata-profiling = "^4.0.0"
mkdocs-jupyter = "^0.22.0"
mkdocs-video = "^1.4.0"
mkdocs-glightbox = "^0.3.1"
mkdocs-awesome-pages-plugin = "^2.8.0"
mkdocs-print-site-plugin = "^2.3.4"
requests = "^2.28.2"
html5lib = "^1.1"
htmlark = "^1.0.0"
pymdown-extensions = "^9.9.2"
missingno = "^0.5.2"
dataframe-image = "^0.1.5"
reportlab = "^3.6.12"
prince = "0.6.3"
ipywidgets = "^8.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
